--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -97,27 +97,31 @@ body {
   max-width: 100vw;
   justify-content: center;
   align-items: center;
-  background-color: #5AB2FF;
+  background-image: url("../assets/v870-tang-36.jpg");
+
+  /* background-color: #5AB2FF; */
 }
 
 /* Form container styling */
 .form-container {
-  background: white;
+  background: rgb(255, 255, 255);
+  background-color: #77CDFF;
   width: 50%;
-  padding: 2rem;
+  padding: 3rem;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(233, 111, 111, 0.1);
 }
 
 .form-container form {
-  background-color: rgb(255, 255, 255);
+  background-color: #0D92F4;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-radius: 10px;
 }
 .form-container a {
-  color: rgb(12, 94, 236);
+  color: #211C84;
   font-weight: bold;
   font-size: 2rem;
 }
@@ -141,7 +145,7 @@ form input {
 form button {
   width: 100%;
   padding: 0.75rem;
-  background-color: #007bff;
+  background-color: #211C84;
   color: white;
   border: none;
   font-size: 1rem;
